[package]
name = "devault"
version = "0.1.0"
authors = ["Rajesh Kanna <kannar432@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "4", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
pink-extension = { version = "0.4", default-features = false }
fastrand = { version = "2.0.0", default-features = false, features = ["alloc"]}
zeroize = { version = "1.6.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.181", default-features = false, features = ["derive", "alloc"] }
serde-json-core = { version = "0.5.1", default-features = true}
bin_serde = { package = "postcard", version = "1.0.5", default-features = false, features = ["alloc"] }
argon2 = { version = "0.5.1", default-features = false, features = ["alloc"]}
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["alloc", "stream"] }
miniz_oxide = "0.7.1"

[dev-dependencies]
pink-extension-runtime = "0.4"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "pink-extension/std"]
ink-as-dependency = []
e2e-tests = []
